--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
-body{
+html, body{
 	scroll-behavior: auto;
-	background-color: white;
-	overflow-x: hidden; /* Hide horizontal scrollbar */
+	background-color: #f4f6f5;
+	max-width: 100%;
+	overflow-x: hidden;
 }
+
 .navbar-style{
 	margin-top: 30px;
 	margin-left: 50px;
@@ -13,22 +15,100 @@ body{
 .main{
 	margin-left: 75px;
 	margin-right: 75px;
-	margin-top: 20px;
+	margin-top: 110px;
 	scroll-behavior: smooth;
 }
 
+.responsive-landing-design{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.flex-item-left {
+	flex: 65%;
+}
+
+.flex-item-right {
+ 	flex: 35%;
+}
+
 .introtext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
-	margin-top: 120px;
-	color: #472E1E;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 48pt;
+	margin-top: 90px;
+	font-weight: 900;
+	color: #3a4046;
 }
 
 .subintro-text{
 	margin-top: 15px;
-	font-family: 'Tajawal', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 24pt;
 	font-weight: 600;
-	color: #272526;
+	color: #747b81;
+}
+
+.root-button {
+	text-align: center;
+	cursor: pointer;
+	font-size:24px;
+	margin-top: 10px;
+}
+
+.certificate-button{
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
+	padding: 15px;
+	width: 350px;
+	color: white;
+	text-decoration: none;
+}
+
+.certificate-button:hover{
+	text-decoration: none;
+	color: white;
+}
+
+.resume-button{
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
+	border-radius: 4px;
+	background-color:#3a4046;
+	color: white;
+	text-transform: uppercase;
+	border: none;
+	padding: 10px;
+	width: 190px;
+	transition: all 0.5s;	
+}
+
+.resume-button span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+}
+
+.resume-button span:after {
+	content: '»';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.5s;
+}
+
+.resume-button:hover span{
+	padding-right: 25px;
+}
+
+.resume-button:hover span:after {
+	opacity: 1;
+	right: 0;
+}
+
+.download-icon{
+	margin-right: 7px;
 }
 
 .dm-icon{
@@ -37,44 +117,46 @@ body{
 }
 
 .my-image{
-	width: 250px;
+	width: 100%;
 	margin-top: 60px;
-	border-radius: 50%;
 }
 
 .abouttext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
-	margin-top: 250px;
-	color: #472E1E;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 32pt;
+	margin-top: 120px;
+	color: #3a4046;
 }
 
 .subabout-text{
 	margin-top: 55px;
 	margin-left: 75px;
 	margin-right: 75px;
-	font-family: 'Tajawal', sans-serif;
-	color: #272526;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
+	color: #747b81;
 }
 
 .certificatetext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 32pt;
 	margin-top: 80px;
 	margin-bottom: 50px;
-	color: #472E1E;
+	color: #3a4046;
 }
 
 .servicetext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
-	margin-top: 200px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 32pt;
+	margin-top: 100px;
 	margin-bottom: 50px;
-	color: #472E1E;
+	color: #3a4046;
 }
 
 .card-design{
-	font-family: 'Tajawal', sans-serif;
 	margin-bottom: 20px;
 	border: none;
 	border-radius: 10px;
@@ -82,12 +164,14 @@ body{
 }
 
 .custom-card-text{
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
 	font-size: 18.5px;
-	text-align: justify;
+	text-align: left;
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-bottom: 20px;
-	color: #272526;
+	color: #747b81;
 }
 
 .card-section{
@@ -95,61 +179,72 @@ body{
 }
 
 .skilltext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
-	margin-top: 180px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 32pt;
+	margin-top: 120px;
 	margin-bottom: 50px;
-	color: #472E1E;
+	color: #3a4046;
 }
 
 .skills-design{
-	font-family: 'Tajawal', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
 }
 
 .tooltext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
-	margin-top: 180px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 32pt;
+	margin-top: 150px;
 	margin-bottom: 50px;
-	color: #472E1E;
+	color: #3a4046;
 }
 
 .toolcardtext{
-	font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+	font-size: 24pt;
 	margin-top: 40px;
-	color: #472E1E;
+	color: #3a4046;
 }
 
 .toolcardsubtext{
-	font-family: 'Tajawal', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	text-align: justify;
 	font-size: 20px;
 	margin-top: 15px;
-	color: #272526;
+	color: #747b81;
 }
 
 .toolsmaintext{
-	color: #472E1E;
-	font-family: 'Tajawal', sans-serif;
+	color: #3a4046;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 500;
 	font-size: 21.5px;
 	margin-top: 60px;
 }
 
 .items-tools-style{
-	color: #272526;
+	color: #747b81;
 }
 
 .toolcardlisttext{
-	font-family: 'Tajawal', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 }
 
 .certificate-card-header{
-	height: 50px;
-	color: #472E1E;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 24pt;
+	margin-right: 20px;
+	margin-left: 20px;
+	height: 80px;
+	color: #3a4046;
 }
+
 .progress-bar-style{
-	background-color: #D1B169;
+	background-color: #3a4046;
 }
 
 #TopButton {
@@ -161,7 +256,7 @@ body{
 	font-size: 18px;
 	border: none;
 	outline: none;
-	background-color:#472E1E;;
+	background-color:#3a4046;;
 	color: white;
 	cursor: pointer;
 	padding: 15px;
@@ -169,21 +264,55 @@ body{
   }
   
   #TopButton:hover {
-	background-color: #D9DEB5;
-	color: black;
+	background-color: #747b81;
+	color: white;
   }
 
+  .custom-nav-hover{
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
+	color: #3a4046;
+  }
+
+  .custom-nav-hover:hover{
+	transition: transform .2s; /* Animation */
+	transform: scale(1.2);
+  }
+  
+/* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
 	.main{
-		margin-left: 40px;
-		margin-right: 40px;
+		margin-left: 30px;
+		margin-right: 30px;
 		margin-top: 20px;
 	}
+
+	.certificate-card-header{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18.5pt;
+	height: 80px;
+	color: #3a4046;
+	}
+
+	.flex-item-right, .flex-item-left {
+		flex: 100%;
+	}
+
+	.introtext{
+		font-family: 'Source Sans Pro', sans-serif;
+		font-size: 36pt;
+		margin-top: 90px;
+		font-weight: 900;
+		color: #3a4046;
+	}
+
 	.subabout-text{
 		margin-top: 55px;
-		margin-left: 40px;
-		margin-right: 40px;
-		font-family: 'Tajawal', sans-serif;
+		margin-left: 20px;
+		margin-right: 20px;
+		font-family: 'Open Sans', sans-serif;
+		font-weight: 600;
+		color: #747b81;
 	}
 	#TopButton {
 		display: none;
@@ -194,19 +323,12 @@ body{
 		font-size: 18px;
 		border: none;
 		outline: none;
-		background-color: #472E1E;
+		background-color: #3a4046;
 		color: white;
 		cursor: pointer;
 		padding: 15px;
 		border-radius: 20px;
 	  }
-	  .navbar-style{
-		margin-top: 5px;
-		margin-left: 5px;
-		margin-right: 5px;
-		font-family: 'Poppins', sans-serif;
-	}
-  }
-
+}
 
   
