--- a/css/footer.css
+++ b/css/footer.css
@@ -22,7 +22,7 @@
   transition: color 0.2s;
 }
 .footer .about-company a:hover {
-  color: #4180cb;
+  color: #2a9df4;
 }
 .footer .location i {
   font-size: 18px;
